--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,9 @@
         <article>“If you can’t give me poetry, can’t you give me poetical science?”</article>
     </section>
     <p>Det kanske var just Adas intresse att blanda matematik, logik, fantasi och poesi som gjorde att hon såg saker på ett annorlunda sätt.</p>
-<footer>Källor</footer>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Ada_Lovelace_portrait.jpg" alt="Ada Lovelace" width="300" height="400">
+<footer>
+    <h2>Källor</h2></footer>
 <p>Hollings C, Martin U, Rice A. (2018). Ada Lovelace: The Making of a Computer Scientist</p>    
 <a href=""https://en.wikipedia.org/wiki/Ada_Lovelace"">Wikipedia Ada Lovelace</a>
 </body>
